2003-03-10  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-ldap-client.adb:
	(Check_Handle): New routine.
	Use it in all routines using a Dir parameter to check whether the
	 LDAP handle is initialized.
	(Unbind): Call thin ldap_unbind_s only if Dir is not null (open).

	* aws-ldap-client.ads:
	(Unbind): Add comments.
	Update copyright header.

2003-03-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-session.adb:
	Fix comment about Get_Sessions_And_Lock usage. It is not using in
	 the session cleaner now.

2003-03-08  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-session.adb:
	(Key_Exist): Is now a procedure and not an entry. Do not lock if
	 an iterator is running.
	(Get_Value): Idem.
	(Get_Sessions_And_Lock): Update comment.
	
	* aws-session.ads:
	(For_Every_Session): Update comments.
	(For_Every_Session_Data): Update comments.

	* aws-client.adb:
	(Parse_Header): Set Connection.Cookie only if not already set. Add
	 note about cookie limitation on the client side.

	* aws-config-set.ads:
	(Free_Slots_Keep_Alive_Limit): Fix comments.

	* aws-config.ads:
	(Free_Slots_Keep_Alive_Limit): Fix comments.

	* aws-server.adb:
	(Line): Fix previous code which does not compile.

2003-03-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-config-set.ads, aws-config-set.adb:
	(Free_Slots_Keep_Alive_Limit): New configuration parameter.
	Minor reformatting.

	* aws-server.adb:
	(Line): Move Keep_Alive_Limit declaration to the upper declare block,
	 just a bit more readable.

2003-03-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-default.adb:
	(Free_Slots_Keep_Alive_Limit): New default value.

	* aws-config.ads, aws-config.adb:
	(Free_Slots_Keep_Alive_Limit): New configuration parameter.

	* aws-server.adb:
	(Line):	Use Free_Slots_Keep_Alive_Limit for enable keep-alive
	 connections.

2003-03-07  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-ldap-client.adb:
	(Raise_Error): Do not free pointer returned by ldap_err2string as
	 it a pointer to a static space. Fix memory corruption.
